syntax = "proto3";

option go_package = "shared/message";

service MessageService {
    rpc FindAll (MessageRequest) returns (MessageResponses) {}
}

message MessageRequest {}

message MessageResponses {
    repeated Message data = 1;
}

message Message {
    string username = 1;
    string message = 2;
}